Skeleton layout for D4

--- a/d4.tex
+++ b/d4.tex
@@ -1,54 +1,35 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \documentclass{l3deliverable}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{graphicx}
+\usepackage{svn-multi}
 
-\usepackage{graphicx}%
+\version{Final version 1.0}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% See D1 for an example of how to integrate sub version revision
-%% numbers into a LaTeX document.
-%
-\usepackage{svn-multi}%
-\svnid{$Id: $}
+\usepackage{url}
 
-\version{SVN Revision \svnrev~ \
+\title{Final Report}
 
-Made \svnday/\svnmonth/\svnyear~ by \svnauthor}
+\author{
+    Gordon Reid: 1002536R\\
+    Ryan Wells: 1002253W\\
+    Kristopher Stewart: 1007175S\\
+    David Selkirk: 1003646S\\
+    James Gallagher: 0800899G\\
+}
 
-\usepackage{url}%
+\date{\today}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Check these macro values for appropriateness for your own document.
-
-\title{Prototyping Report}
-
-\author{Author 1 \\
-        Author 2 \\
-        Author 3 \\
-        ...}
-
-\date{9 January 2009}
-
-\deliverableID{D3}
+\deliverableID{D4}
 \project{PSD3 Group Exercise 1}
-\team{X}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\team{W}
 
 \begin{document}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \maketitle
 
 \tableofcontents
 
 \newpage
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Standard section for all documents
 
 \section{Introduction}
 
@@ -60,20 +41,23 @@ Made \svnday/\svnmonth/\svnyear~ by \svnauthor}
 
 \subsection{Document Status and Schedule}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \section{Objectives}
-%%Why build the prototype?
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Group organisation}
+
+\section{Project Plan}
+
+\section{Requirements Specification}
 
 \section{Prototype Scope and Design}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Prototype design description}
 
-\section{Evaluation}
+\subsection{Rationale for main features of prototype}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Evaluation of Prototype}
+
+\section{Change log}
 
 \appendix
 
@@ -81,14 +65,8 @@ Some suggested appendices are included below. Appendices should be
 used to include information not completely necessary to the
 understanding of the main document.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \section{Glossary}
 
 Definitions.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \end{document}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
