added breakdowns of document

--- a/d4.tex
+++ b/d4.tex
@@ -32,32 +32,45 @@
 \newpage
 
 \section{Introduction}
+\input{texfiles/introduction.tex}
 
 \subsection{Identification}
+\input{texfiles/identification.tex}
 
 \subsection{Related Documentation}
+\input{texfiles/relateddocumentation.tex}
 
 \subsection{Purpose and Description of Document}
+\input{texfiles/purposeanddescription.tex}
 
 \subsection{Document Status and Schedule}
+\input{texfiles/documentstatus.tex}
 
 \section{Objectives}
+\input{texfiles/objectives.tex}
 
 \section{Group organisation}
+\input{texfiles/grouporganisation.tex}
 
 \section{Project Plan}
+\input{texfiles/projectplan.tex}
 
 \section{Requirements Specification}
+\input{texfiles/requirementsspec.tex}
 
 \section{Prototype Scope and Design}
+\input{texfiles/prototypescope.tex}
 
 \subsection{Prototype design description}
-
+\input{texfiles/prototypedesign.tex}
 \subsection{Rationale for main features of prototype}
+\input{texfiles/rationale.tex}
 
 \section{Evaluation of Prototype}
+\input{texfiles/evaluation.tex}
 
 \section{Change log}
+\input{texfiles/changelog.tex}
 
 \appendix
 
