Continuation of Group Organisation

--- a/texfiles/grouporganisation.tex
+++ b/texfiles/grouporganisation.tex
@@ -1,3 +1,12 @@
+\subsection{Roles}
+Gordon Reid was responsible for maintaining and configuring the software tools
+used by the team. For example, he set up and maintained the various GitHub
+repositories, including making sure the repositories were never cluttered
+with unnecessary files. He was also the main proof reader for all
+deliverables.
+
+ADD ROLES FOR OTHERS.
+
 \subsection{Authority}
 
 The group has decided to delegate authority by role. Roles are volunteered for
@@ -26,3 +35,57 @@ ability to have real time chat with members currently online.
 
 The face to face meetings will allows us to take part in pair programming,
 group discussion, and general progress report.
+
+GitHub will be used to communicate source code changes via the commit log. In
+addition to this there is also an `Issues' section in which known bugs can be
+viewed, added to, or commented on. There is also the option for creating
+milestones with associated tickets to provide an overview of overall project
+progress.
+
+The methods were also chosen to allow information flow at any time, and from
+any location. Facebook allows instant communication of important information
+since the group are all equipped with smartphones. The extensive logging
+facilities of GitHub let us leave detailed information on any changes to the
+current system and documentation. GitHub also provides numerous graphical
+representations of quantitative data. This can help visualise overall
+progress through the project.
+
+The group decided early on that regular face-to-face meetings were crucial
+in the broader aspects of design, since any misunderstandings or
+miscommunication at this level could lead to massive problems further down
+the line.
+
+\subsection{Information Management}
+
+Every file of source code and every deliverable is kept in a GitHub repository
+which simulataneously acts as central version control and backup. Every
+team member has full access to every repository associated with the project.
+
+Separate from the shared documentation, each team member will be keeping a
+weekly blog on the University of Glasgow's Mahara website. This will be
+inaccessible by other members of the team as it plays no part in the overall
+project development.
+
+Any physical documentation created, for instance meeting minutes, will be
+backed up electronically either via photographs being taken of the pages or
+by typing the documentation up and uploading to the appropriate repository.
+
+\subsection{Organisational Risks}
+
+The loose structure of the group does have various associated risks. The
+lack of concrete structure means the team has to stay on task, as they
+have no boss to drive them should they slack off. The weekly meetings
+have been implemented to try and offset this, but it is possible that this
+may not be as effective as hoped.
+
+The changing structure of the roles could lead to confusion over who is
+doing what from week to week. We plan to clarify the weeks tasks at the
+end of each meeting to counter this issue.
+
+The current structure has no assurance that the person who has volunteered
+for the tasks has the technical ability to do so. This may be irrelevant
+for this project as it is part of an educational course however should still
+be discussed and planned for. The open nature of the team should naturally
+resolve this as help is only a Facebook post, or GitHub issue away.
+
+MORE NEEDED
