Minor formatting change

--- a/d4.tex
+++ b/d4.tex
@@ -76,14 +76,17 @@
 \section{Evaluation of Prototype}
 \input{texfiles/evaluation.tex}
 
+\newpage
+
 \section{Change log}
 \input{texfiles/changelog.tex}
+
+\newpage
 
 \appendix
 \input{texfiles/appendix.tex}
 
 \section{Glossary}
 \input{texfiles/glossary.tex}
-
 
 \end{document}
