Fix typos and add name placeholders

--- a/texfiles/grouporganisation.tex
+++ b/texfiles/grouporganisation.tex
@@ -5,21 +5,27 @@ repositories, including making sure the repositories were never cluttered
 with unnecessary files. He was also the main proof reader for all
 deliverables.
 
-ADD ROLES FOR OTHERS.
+Ryan Wells
+
+Kris Stewart
+
+James Gallagher
+
+David Selkirk
 
 \subsection{Authority}
 
 The group has decided to delegate authority by role. Roles are volunteered for
-on a temporary basis, allowing both flexibility and persisitence, as the
+on a temporary basis, allowing both flexibility and persistence, as the
 member or group decides. Roles can be rotated or adjusted to allow for
 circumstances such as deadlines or illness. This approach was chosen to play
-to the individual members' strengths and to facilite group cohesion, as none
+to the individual members' strengths and to facilitate group cohesion, as none
 of us can claim to be `senior' to the others.
 
 Decisions will primarily be made on a democratic voting method where any
 major changes are brought forward to the whole group, discussed, then voted
 on. For minor decisions, such as role specific decisions, these can be made
-by the individual it soley affects.
+by the individual it solely affects.
 
 With the democratic voting method with prior discussion disputes should be
 rare. Majority vote rules and should be accepted by all members of the team.
@@ -58,7 +64,7 @@ the line.
 \subsection{Information Management}
 
 Every file of source code and every deliverable is kept in a GitHub repository
-which simulataneously acts as central version control and backup. Every
+which simultaneously acts as central version control and backup. Every
 team member has full access to every repository associated with the project.
 
 Separate from the shared documentation, each team member will be keeping a
