Changes to present tense

--- a/texfiles/grouporganisation.tex
+++ b/texfiles/grouporganisation.tex
@@ -1,8 +1,8 @@
 \subsection{Roles}
-Gordon Reid was responsible for maintaining and configuring the software tools
+Gordon Reid is responsible for maintaining and configuring the software tools
 used by the team. For example, he set up and maintained the various GitHub
 repositories, including making sure the repositories were never cluttered
-with unnecessary files. He was also the main proof reader for all
+with unnecessary files. He is also the main proof reader for all
 deliverables.
 
 Ryan Wells
