Minor prototype changes

--- a/texfiles/prototypescope.tex
+++ b/texfiles/prototypescope.tex
@@ -6,4 +6,7 @@ as each user, viewing advertisments as each user (with appropriate restrictions 
 or company), approving or rejecting submitted advertisments by the course coordinator and 
 submitting advertisements as the company. These features were all included and to some degree
 implemented. We also included various features that do not currently do anything but were
-classified as important to the workflow and so included in the appropriate places.
+classified as important to the workflow and so included in the appropriate places. This includes 
+amending adverts, students declaring successfull application and viewing student declarations
+of success.
+
