More minor proto changes

--- a/texfiles/prototypescope.tex
+++ b/texfiles/prototypescope.tex
@@ -5,8 +5,9 @@ flow of the program were included in the scope. These were decided to be a multi
 viewing advertisments as each user (with appropriate restrictions as a student 
 or company), approving or rejecting submitted advertisments by the course coordinator and 
 submitting advertisements as the company. These features were all included and to some degree
-implemented. We also included various features that do not currently do anything but were
-classified as important to the workflow and so included in the appropriate places. This includes 
-the actual process of logging into the system as each user, amending adverts, students declaring
-successfull application and viewing student declarations of success.
+implemented. We also included various features that were not actually implemented but were
+classified as important to the workflow and so stub methods were hardcoded ouput were put in 
+the appropriate places. This includes the actual process of logging into the system as each user,
+amending adverts, students declaring successfull application and viewing student declarations 
+of success.
 
