--- a/texfiles/prototypedesign.tex
+++ b/texfiles/prototypedesign.tex
@@ -1,4 +1,6 @@
 The design of the prototype was driven by the simplicity of the scope and the bash language. Once we agreed on
 what we wished to learn from the prototype and used this to decide the scope, we were able to draw up a simple
 set of text-based menus that demonstrated the functionality and workflow such that the clients could have a 
-meaningful look at how we understood the requirements.
+meaningful look at how we understood the requirements. We very quickly focussed on the idea that the system has 
+multiple types of user and so designed the system such that this is addressed immediately, and directs the user to
+options that apply to them.
