--- a/texfiles/prototypedesign.tex
+++ b/texfiles/prototypedesign.tex
@@ -2,5 +2,8 @@ The design of the prototype was driven by the simplicity of the scope and the ba
 what we wished to learn from the prototype and used this to decide the scope, we were able to draw up a simple
 set of text-based menus that demonstrated the functionality and workflow such that the clients could have a 
 meaningful look at how we understood the requirements. We very quickly focussed on the idea that the system has 
-multiple types of user and so designed the system such that this is addressed immediately, and directs the user to
-options that apply to them.
+multiple types of user and so designed the system such that this is addressed immediately, directing the user to
+options that apply to them. In this way we show the way the eventual implementation will separate the users 
+functionality without having to actually implement the login system, which was not feasable. The submission, 
+accepting and viewing of adverts were so key to the system requirements that they were implemented to a 
+more tangible degree.
