--- a/texfiles/prototypedesign.tex
+++ b/texfiles/prototypedesign.tex
@@ -6,4 +6,8 @@ multiple types of user and so designed the system such that this is addressed im
 options that apply to them. In this way we show the way the eventual implementation will separate the users 
 functionality without having to actually implement the login system, which was not feasable. The submission, 
 accepting and viewing of adverts were so key to the system requirements that they were implemented to a 
-more tangible degree.
+more tangible degree, using a simple file creation/storage system to allow the dynamic creation of very simple
+textual adverts. We did this to allow the user to create adverts and see their progress through the system, rather 
+than simply show a demo advert which may have skipped over small issues. The other category of features 
+within the scope of the system were those that were to be included, but not made functional. These were 
+implemented in a very simple manner, comprising of basic print statements that did nothing beyond this.
