change use of ampersand to 'and'
cleaner than using & which then using LaTeX requires a preceding \

--- a/texfiles/evaluation.tex
+++ b/texfiles/evaluation.tex
@@ -4,7 +4,7 @@ The prototype successfully demonstrates the main functionality of the final buil
 
 The program due to being minimalist in nature because it's what the client requested limits the flexibility; there are no rich text formats, colours, tabbing, images or anything other than simple text for the company to write their adverts with. There is no need to amend or add on more functionality into the prototype in the future because it would be gold plating and unnecessary in this case.
 
-The usability of the program is incredibly easy and very user friendly. It's a text based program in which there are numerous menu's available depending on what type of user you are - student/course coordinator/company. Navigating this simple program is a case of selecting an option (numbered) in each menu. The main functionality of say a particular company would be to add adverts (& amend), this requires numerous sections to appear where the company must fill in these sections with as much detail as possible for the student - e.g. locations, how to contact, requirements, payment, time etc. Simplistic tasks to follow before its fully added and thus also complies with the proper formatting of adverts.
+The usability of the program is incredibly easy and very user friendly. It's a text based program in which there are numerous menu's available depending on what type of user you are - student/course coordinator/company. Navigating this simple program is a case of selecting an option (numbered) in each menu. The main functionality of say a particular company would be to add adverts (and amend them), this requires numerous sections to appear where the company must fill in these sections with as much detail as possible for the student - e.g. locations, how to contact, requirements, payment, time etc. Simplistic tasks to follow before its fully added and thus also complies with the proper formatting of adverts.
 
 The user interface is as mentioned above incredibly simplistic being text based. Selecting an option such as "3) Student", on the starting menu which asks which type of user you are will open the Student menu where other options, numbered, will appear and can be selected by entering the number of the option. Eventually you come across an option that doesn't navigate to other menus but instead performs a function such as, for students, the viewing of all the accepted advertisements then at the top you'll see the advert as created by the specific company. There is no clutter on this interface just the options that are needed and navigating from the main menu to each of the users respective main "functionalities" takes no more than 3 menu navigations, all the while still maintaining the option of going back to previous stages for ease of use.
 
