--- a/texfiles/rationale.tex
+++ b/texfiles/rationale.tex
@@ -1,2 +1,7 @@
-The main features of the prototype were all identified by considering both what we wished to show
-and what we wished to learn from the client.
+The main features of the prototype were identified by considering both what we wished to show to
+and learn from the client. We decided that we needed to be sure that the basic workflow of the system 
+as we understood it matched up to the clients expectations, and so it was decided that the prototype should
+allow the user to see full structure of the systems workflow, even if some of the functionality wasn't actually 
+there. This resulted in the list of functional and non-functional features that were developed in the prototype.
+The core features were decided to be submitting, approving and viewing adverts, as applicable for each type
+of user.
