--- a/texfiles/rationale.tex
+++ b/texfiles/rationale.tex
@@ -3,5 +3,8 @@ and learn from the client. We decided that we needed to be sure that the basic w
 as we understood it matched up to the clients expectations, and so it was decided that the prototype should
 allow the user to see full structure of the systems workflow, even if some of the functionality wasn't actually 
 there. This resulted in the list of functional and non-functional features that were developed in the prototype.
-The core features were decided to be submitting, approving and viewing adverts, as applicable for each type
-of user.
+The core functional features were decided to be submitting, approving and viewing adverts, as applicable for 
+each type of user. Being core features these were implemented to a degree such that the client could actually
+interact with these features freely and give us whatever feedback came up as they actually used the system. 
+The fact that we designed the prototype to include the user-types was important, as this is key to the system 
+workflow and we needed to be sure that we understood the functions and limitations of each user.
