Minor rationale changes

--- a/texfiles/rationale.tex
+++ b/texfiles/rationale.tex
@@ -7,4 +7,5 @@ The core functional features were decided to be submitting, approving and viewin
 each type of user. Being core features these were implemented to a degree such that the client could actually
 interact with these features freely and give us whatever feedback came up as they actually used the system. 
 The fact that we designed the prototype to include the user-types was important, as this is key to the system 
-workflow and we needed to be sure that we understood the functions and limitations of each user.
+workflow and we needed to be sure that we understood the functions and limitations of each user as envisaged
+by the client and required by the system.
