small purpose+description change

--- a/texfiles/purposeanddescription.tex
+++ b/texfiles/purposeanddescription.tex
@@ -1,2 +1,3 @@
 The purpose of this document is to show the design process and final results of the Team W internship 
-management prototype.
+management prototype. It covers the reasons for the prototype, the design and implementation work
+and the results of the prototype demonstration with the client.
