Minor fixes to objectives

--- a/texfiles/objectives.tex
+++ b/texfiles/objectives.tex
@@ -1,13 +1,13 @@
 \subsection{Objectives}
 
-The objectives behind making a prototype for the Internship Management System, were clearly laid out before any form of implementation was started.
+The objectives of the prototype for the Internship Management System were clearly laid out before any form of implementation was started.
 
 
-The main objective of the prototype was to provide a demonstration of the proposed design of the System to the clients. The prototype was used by the team to display proposed used cases for the system in a simple manner.
+The main objective of the prototype was to provide a demonstration of the proposed design of the system to the clients. The prototype was used by the team to display proposed use cases for the system in a simple manner.
 The team would use the prototype to give the clients of the system a walk through of the proposed design.
 
 
-A second objective of the prototype was to support the gathering of requirements of the system. When giving the clients of the system a walk through it was hoped that the prototype would provide very helpful in resolving any ambiguities or inconsistencies in the requirements that the team had gathered.
+A second objective of the prototype was to support the gathering of requirements of the system. When giving the clients a walk through it was hoped that the prototype would prove helpful in resolving any ambiguities or inconsistencies in the requirements that the team had gathered.
 
 
 The third goal of the prototype was to investigate the feasibility of the system which had been designed. The prototype was hoped to be able to be developed quickly, and would be able to show that the main requirements of the Internship Management System were achievable. The team hoped that the prototype would provide a solid proof of concept for the design that they had developed.
