--- a/texfiles/changelog.tex
+++ b/texfiles/changelog.tex
@@ -1,18 +1,17 @@
 \begin{itemize}
 
-\item Expanded Roles section to be more descriptive about each person and
-their various roles within the project.
+\item Began prototype scope and design sections
 
-\item Added a paragraph descripting the dispute resolution technique used by
-the team, democratically voting on major decisions.
+\item Began objectives and introduction sections.
 
-\item Described further the tools used for communication and the reasons
-behind the decision to use the stated tools.
+\item Finished scope.
 
-\item Clarified the team's position on use of and the backup of physical
-documentation.
+\item Finished the prototype design.
 
-\item Fleshed out the organisational risks section of the document to
-encompass more risks, and described existing risks in more detail.
+\item Began evaluation
+
+\item Finished evaluation and introduction sections.
+
+\item Finished objectives
 
 \end{itemize}
