Adapting old files to current doc

--- a/texfiles/documentstatus.tex
+++ b/texfiles/documentstatus.tex
@@ -1,6 +1,4 @@
-This document is the final report consisting of a description of our group
-organisation, the Internship Management System project plan, a requirements
-specification for the system, and a report on the prototype and demonstration.
+This document is the final report on the prototype and demonstration.
 
 In addition to this, at the end of the document, there is a list of changes
-made from the draft deliverables to this final version.
+made from the draft to this final version.
