--- a/texfiles/identification.tex
+++ b/texfiles/identification.tex
@@ -1,4 +1,4 @@
 
 %%STILL IN DRAFT
 
-This is the requirements specification for the level 3 project by team W. The project is based on an internship management system for Software Engineering (SE) and Electronic and Software Engineering (ESE) students, studying in the School of Computing Science.
+This is the prototype report for the level 3 project by team W. The project is based on an internship management system for Software Engineering (SE) and Electronic and Software Engineering (ESE) students, studying in the School of Computing Science.
