Added source code to appendix

--- a/d4.tex
+++ b/d4.tex
@@ -1,7 +1,7 @@
 \documentclass{l3deliverable}
 
 \usepackage{graphicx}
-
+\usepackage{listings}
 \version{Final version 1.0}
 
 \usepackage{url}
@@ -75,9 +75,11 @@
 \newpage
 
 \appendix
-\input{texfiles/appendix.tex}
 
 \section{Glossary}
 \input{texfiles/glossary.tex}
+
+\section{Source Code}
+\input{texfiles/appendix.tex}
 
 \end{document}
